Fixed margin and flex-wrap issues

--- a/styles.css
+++ b/styles.css
@@ -152,7 +152,7 @@ br {
   border-radius: 15px;
   padding: 30px;
   margin: 10px 10%;
-  justify-content: space-evenly;
+  flex-grow: 1;
 }
 
 .content-card {
@@ -161,10 +161,9 @@ br {
   padding: 20px;
   margin-top: 10px;
   margin-bottom: 10px;
-}
-
-.mobile-card {
-  justify-content: space-around;
+  margin: 10px;
+  flex-grow: 1;
+  max-width: 800px;
 }
 
 .project {
@@ -190,7 +189,7 @@ br {
 }
 
 .contact-icon {
-  width: 100px;
+  width: 80px;
   max-width: 100%;
   height: auto;
   margin: 0 10px;
@@ -205,7 +204,7 @@ br {
 }
 
 .contact-card {
-  height: 250px;
+  min-height: 200px;
   justify-content: center;
 }
 
@@ -248,15 +247,17 @@ br {
 
   .mobile-card {
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
     margin: 10px 0;
   }
 
   .mobile-content {
-    width: 90%;
+    width: auto;
     justify-content: center;
     align-items: center;
+  }
+
+  .contact-card {
+    height: auto;
   }
 }
 
